--- a/squirrel_EDA.ipynb
+++ b/squirrel_EDA.ipynb
@@ -1131,12 +1131,433 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.read_csv()"
+    "kkh = pd.read_csv(\"https://raw.githubusercontent.com/bmcgarry194/knn_workshop/master/data/kc-house-data.zip\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>date</th>\n",
+       "      <th>price</th>\n",
+       "      <th>bedrooms</th>\n",
+       "      <th>bathrooms</th>\n",
+       "      <th>sqft_living</th>\n",
+       "      <th>sqft_lot</th>\n",
+       "      <th>floors</th>\n",
+       "      <th>waterfront</th>\n",
+       "      <th>view</th>\n",
+       "      <th>...</th>\n",
+       "      <th>grade</th>\n",
+       "      <th>sqft_above</th>\n",
+       "      <th>sqft_basement</th>\n",
+       "      <th>yr_built</th>\n",
+       "      <th>yr_renovated</th>\n",
+       "      <th>zipcode</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>long</th>\n",
+       "      <th>sqft_living15</th>\n",
+       "      <th>sqft_lot15</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7063</th>\n",
+       "      <td>3747600050</td>\n",
+       "      <td>20141105T000000</td>\n",
+       "      <td>319450.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>2250</td>\n",
+       "      <td>5472</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1750.0</td>\n",
+       "      <td>500</td>\n",
+       "      <td>1930</td>\n",
+       "      <td>0</td>\n",
+       "      <td>98002</td>\n",
+       "      <td>47.3065</td>\n",
+       "      <td>-122.219</td>\n",
+       "      <td>1540</td>\n",
+       "      <td>5472</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4580</th>\n",
+       "      <td>6398000011</td>\n",
+       "      <td>20140602T000000</td>\n",
+       "      <td>789000.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>3740</td>\n",
+       "      <td>39640</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3740.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>0</td>\n",
+       "      <td>98070</td>\n",
+       "      <td>47.4036</td>\n",
+       "      <td>-122.462</td>\n",
+       "      <td>2930</td>\n",
+       "      <td>26136</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9518</th>\n",
+       "      <td>6450301220</td>\n",
+       "      <td>20140916T000000</td>\n",
+       "      <td>264000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>710</td>\n",
+       "      <td>4725</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>710.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1939</td>\n",
+       "      <td>0</td>\n",
+       "      <td>98133</td>\n",
+       "      <td>47.7328</td>\n",
+       "      <td>-122.340</td>\n",
+       "      <td>900</td>\n",
+       "      <td>5250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12729</th>\n",
+       "      <td>1926049385</td>\n",
+       "      <td>20140729T000000</td>\n",
+       "      <td>559950.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2.50</td>\n",
+       "      <td>2650</td>\n",
+       "      <td>7200</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2250.0</td>\n",
+       "      <td>400</td>\n",
+       "      <td>1979</td>\n",
+       "      <td>0</td>\n",
+       "      <td>98133</td>\n",
+       "      <td>47.7317</td>\n",
+       "      <td>-122.354</td>\n",
+       "      <td>2110</td>\n",
+       "      <td>7269</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13003</th>\n",
+       "      <td>2874600040</td>\n",
+       "      <td>20140804T000000</td>\n",
+       "      <td>680000.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.25</td>\n",
+       "      <td>2920</td>\n",
+       "      <td>6300</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1710.0</td>\n",
+       "      <td>1210</td>\n",
+       "      <td>1956</td>\n",
+       "      <td>0</td>\n",
+       "      <td>98177</td>\n",
+       "      <td>47.7065</td>\n",
+       "      <td>-122.370</td>\n",
+       "      <td>1940</td>\n",
+       "      <td>6300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1349</th>\n",
+       "      <td>3731800055</td>\n",
+       "      <td>20140605T000000</td>\n",
+       "      <td>450000.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>4676</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1250.0</td>\n",
+       "      <td>750</td>\n",
+       "      <td>1916</td>\n",
+       "      <td>1986</td>\n",
+       "      <td>98118</td>\n",
+       "      <td>47.5529</td>\n",
+       "      <td>-122.268</td>\n",
+       "      <td>1140</td>\n",
+       "      <td>4676</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21433</th>\n",
+       "      <td>259500230</td>\n",
+       "      <td>20141218T000000</td>\n",
+       "      <td>465750.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.50</td>\n",
+       "      <td>2670</td>\n",
+       "      <td>4534</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2670.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>0</td>\n",
+       "      <td>98056</td>\n",
+       "      <td>47.5100</td>\n",
+       "      <td>-122.184</td>\n",
+       "      <td>3040</td>\n",
+       "      <td>5079</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20652</th>\n",
+       "      <td>7883603648</td>\n",
+       "      <td>20140522T000000</td>\n",
+       "      <td>300000.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2.50</td>\n",
+       "      <td>2760</td>\n",
+       "      <td>6000</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2760.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>0</td>\n",
+       "      <td>98108</td>\n",
+       "      <td>47.5289</td>\n",
+       "      <td>-122.321</td>\n",
+       "      <td>1360</td>\n",
+       "      <td>6000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14748</th>\n",
+       "      <td>5040800120</td>\n",
+       "      <td>20140527T000000</td>\n",
+       "      <td>967500.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>3250</td>\n",
+       "      <td>5797</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2370.0</td>\n",
+       "      <td>880</td>\n",
+       "      <td>1951</td>\n",
+       "      <td>0</td>\n",
+       "      <td>98199</td>\n",
+       "      <td>47.6481</td>\n",
+       "      <td>-122.405</td>\n",
+       "      <td>1840</td>\n",
+       "      <td>5797</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18669</th>\n",
+       "      <td>9834200975</td>\n",
+       "      <td>20150210T000000</td>\n",
+       "      <td>495000.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>1520</td>\n",
+       "      <td>4080</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1520.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1948</td>\n",
+       "      <td>0</td>\n",
+       "      <td>98144</td>\n",
+       "      <td>47.5720</td>\n",
+       "      <td>-122.290</td>\n",
+       "      <td>1320</td>\n",
+       "      <td>4080</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               id             date     price  bedrooms  bathrooms  \\\n",
+       "7063   3747600050  20141105T000000  319450.0         5       2.00   \n",
+       "4580   6398000011  20140602T000000  789000.0         3       3.00   \n",
+       "9518   6450301220  20140916T000000  264000.0         1       1.00   \n",
+       "12729  1926049385  20140729T000000  559950.0         4       2.50   \n",
+       "13003  2874600040  20140804T000000  680000.0         3       2.25   \n",
+       "1349   3731800055  20140605T000000  450000.0         4       1.00   \n",
+       "21433   259500230  20141218T000000  465750.0         3       2.50   \n",
+       "20652  7883603648  20140522T000000  300000.0         5       2.50   \n",
+       "14748  5040800120  20140527T000000  967500.0         3       3.75   \n",
+       "18669  9834200975  20150210T000000  495000.0         3       3.00   \n",
+       "\n",
+       "       sqft_living  sqft_lot  floors  waterfront  view  ...  grade  \\\n",
+       "7063          2250      5472     1.5           0     0  ...      7   \n",
+       "4580          3740     39640     2.0           0     2  ...     10   \n",
+       "9518           710      4725     1.0           0     0  ...      6   \n",
+       "12729         2650      7200     2.0           0     0  ...      8   \n",
+       "13003         2920      6300     1.0           0     0  ...      8   \n",
+       "1349          2000      4676     1.5           0     0  ...      7   \n",
+       "21433         2670      4534     2.0           0     0  ...      9   \n",
+       "20652         2760      6000     2.0           0     0  ...      8   \n",
+       "14748         3250      5797     2.0           0     2  ...      8   \n",
+       "18669         1520      4080     2.0           0     0  ...      7   \n",
+       "\n",
+       "       sqft_above  sqft_basement  yr_built  yr_renovated  zipcode      lat  \\\n",
+       "7063       1750.0            500      1930             0    98002  47.3065   \n",
+       "4580       3740.0              0      1991             0    98070  47.4036   \n",
+       "9518        710.0              0      1939             0    98133  47.7328   \n",
+       "12729      2250.0            400      1979             0    98133  47.7317   \n",
+       "13003      1710.0           1210      1956             0    98177  47.7065   \n",
+       "1349       1250.0            750      1916          1986    98118  47.5529   \n",
+       "21433      2670.0              0      2007             0    98056  47.5100   \n",
+       "20652      2760.0              0      2006             0    98108  47.5289   \n",
+       "14748      2370.0            880      1951             0    98199  47.6481   \n",
+       "18669      1520.0              0      1948             0    98144  47.5720   \n",
+       "\n",
+       "          long  sqft_living15  sqft_lot15  \n",
+       "7063  -122.219           1540        5472  \n",
+       "4580  -122.462           2930       26136  \n",
+       "9518  -122.340            900        5250  \n",
+       "12729 -122.354           2110        7269  \n",
+       "13003 -122.370           1940        6300  \n",
+       "1349  -122.268           1140        4676  \n",
+       "21433 -122.184           3040        5079  \n",
+       "20652 -122.321           1360        6000  \n",
+       "14748 -122.405           1840        5797  \n",
+       "18669 -122.290           1320        4080  \n",
+       "\n",
+       "[10 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kkh.sample(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        10\n",
+       "1        12\n",
+       "2         2\n",
+       "3        12\n",
+       "4         2\n",
+       "         ..\n",
+       "21608     5\n",
+       "21609     2\n",
+       "21610     6\n",
+       "21611     1\n",
+       "21612    10\n",
+       "Name: date, Length: 21613, dtype: int64"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.to_datetime(kkh.date).dt.month"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([98178, 98125, 98028, 98136, 98074, 98053, 98003, 98198, 98146,\n",
+       "       98038, 98007, 98115, 98107, 98126, 98019, 98103, 98002, 98133,\n",
+       "       98040, 98092, 98030, 98119, 98112, 98052, 98027, 98117, 98058,\n",
+       "       98001, 98056, 98166, 98023, 98070, 98148, 98105, 98042, 98008,\n",
+       "       98059, 98122, 98144, 98004, 98005, 98034, 98075, 98116, 98010,\n",
+       "       98118, 98199, 98032, 98045, 98102, 98077, 98108, 98168, 98177,\n",
+       "       98065, 98029, 98006, 98109, 98022, 98033, 98155, 98024, 98011,\n",
+       "       98031, 98106, 98072, 98188, 98014, 98055, 98039])"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kkh['zipcode'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
